--- a/stylesrc/theme-core/auth.less
+++ b/stylesrc/theme-core/auth.less
@@ -96,6 +96,12 @@
 
 .checkout-auth-option-list {
   .make-row(@gutter: @gutter-width-2-col);
+
+  // Remove the gutter at small resolutions
+  @media (max-width: @screen-sm) {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 .checkout-auth-option-container {
@@ -104,4 +110,12 @@
   .make-lg-column(6, @gutter: @gutter-width-2-col);
 
   margin-bottom: 30px;
+
+  // Disable equalize columns and remove gutter at small resolutions
+  @media (max-width: @screen-sm) {
+    padding-left: 0;
+    padding-right: 0;
+    // Using !important because inline min-height styles are used to equalize column heights via a jQuery plugin
+    min-height: 0 !important;
+  }
 }
